minor fix on smaller screens font sizes on restart game tab

--- a/src/styles/scss/Board.module.scss
+++ b/src/styles/scss/Board.module.scss
@@ -157,8 +157,8 @@
 
 
   &:first-child{
-    font-size: clamp(.75rem, 1.5vw, 3vh);
-    line-height: clamp(1.25rem, 3vw, 6vh);
+    font-size: clamp(.5rem, 2vw, 2.5vh);
+    line-height: clamp(1rem, 4vw, 5vh);
   }
   &:not(:first-child){
     font-size: clamp(.6rem, 2vw, 3vh);
